# cligent

./: .gitignore  CLAUDE.md  README.md  example_usage.py  qodana.yaml  test.yaml
python/: .gitignore  README.md  example_usage.py  pyproject.toml
python/src/: __init__.py  agent.py  cli.py  cligent.py
python/src/agents/: __init__.py
python/src/agents/claude/: __init__.py  claude_code.py
python/src/agents/claude_code/: __init__.py  core.py  utils.py
python/src/agents/codex_cli/: __init__.py  core.py
python/src/agents/gemini/: __init__.py  gemini_cli.py
python/src/agents/gemini_cli/: __init__.py  core.py
python/src/agents/qwen/: qwen_code.py
python/src/agents/qwen_code/: __init__.py  core.py
python/src/chat_parser/: __init__.py  agent.py  client.py  errors.py  executor.py  models.py  parser.py  registry.py  task_models.py
python/src/chat_parser/claude/: claude_code.py  utils.py
python/src/chat_parser/gemini/: __init__.py  gemini_cli.py
python/src/chat_parser/qwen/: __init__.py  qwen_code.py
python/src/cligent/: __init__.py  client.py  registry.py
python/src/cligent/agents/claude/: __init__.py  claude_code.py  utils.py
python/src/cligent/agents/gemini/: gemini_cli.py
python/src/cligent/agents/qwen/: __init__.py  qwen_code.py
python/src/cligent/core/: __init__.py  agent.py  models.py
python/src/cligent/execution/: __init__.py  executor.py  task_models.py
python/src/cligent/parsers/: __init__.py  parser.py  store.py
python/src/cligents/: __init__.py
python/src/cligents/claude/: __init__.py  claude_code.py
python/src/cligents/gemini/: __init__.py  gemini_cli.py
python/src/cligents/qwen/: __init__.py  qwen_code.py
python/src/core/: __init__.py  agent.py  base.py  errors.py  models.py
python/tests/: __init__.py  all_claude_logs.py  conftest.py  test_chat_parser.py  test_claude_code.py  test_claude_recursive.py  test_cli.py  test_codex_cli.py  test_gemini_cli.py  test_imports.py  test_qwen_code.py  with_real_claude_logs.py
python/tests/mock_claude_home/.claude/projects/-home-user-projects-myproject-python/: empty_chat.jsonl  tool_filtering_chat.jsonl
python/tests/mock_gemini_home/.gemini/tmp/: session-20240101-001.jsonl  session-20240101-002.jsonl
python/tests/mock_gemini_home/.gemini/tmp/session-20240101-001/: logs.json
python/tests/mock_gemini_home/.gemini/tmp/session-20240101-002/: logs.json
python/tests/mock_qwen_home/.qwen/logs/: session-20240101-001.jsonl  session-20240101-002.jsonl
python/tests/test_data/another_project/: recent_chat.jsonl
python/tests/test_data/claude_code_project/: malformed_chat.jsonl
python/tests/test_data/codex_cli/: mixed_entries.jsonl  simple_chat.jsonl
python/tests/test_data/gemini_project/: complex_gemini_chat.jsonl  malformed_gemini_chat.jsonl  simple_gemini_chat.jsonl
python/tests/test_data/gemini_project/gemini-session-001/: checkpoint-python-basics.json  logs.json
python/tests/test_data/gemini_project/ml-discussion-002/: checkpoint-final-thoughts.json  logs.json
python/tests/test_data/gemini_project/test-malformed/: logs.json
python/tests/test_data/qwen_project/: checkpoint_qwen_chat.jsonl  complex_qwen_chat.jsonl  malformed_qwen_chat.jsonl  simple_qwen_chat.jsonl
(+10 files in other folders)
